fix navbar on mobile

--- a/client/app/contact/contact.less
+++ b/client/app/contact/contact.less
@@ -2,10 +2,6 @@
 	color: #ddd;
 	background-color: #393f43;
 
-	.services-title{
-		margin-top: 0px;
-	}
-
 	.separator_wrapper {
 		display: block;
 		margin: 12px 0 15px 0;
