--- a/client/app/navbar/navbar.less
+++ b/client/app/navbar/navbar.less
@@ -10,8 +10,17 @@
 		margin-top: 10px;
 	}
 
+	.navbar-toggle{
+		background-color: rgba(163, 205, 85, 0.8);
+		.icon-bar{
+			background-color: white;
+		}
+	}
+
 	.navbar-nav{
 		li{
+			background-color: rgba(255, 255, 255, 0.95);
+			
 			a{			
 				display: inline-block;
 				text-align: center;
